Fix other user pills not visible with dark theme

--- a/res/themes/dark/css/_dark.scss
+++ b/res/themes/dark/css/_dark.scss
@@ -88,7 +88,7 @@ $roomheader-addroom-fg-color: $primary-content;
 // Rich-text-editor
 // ********************
 $rte-room-pill-color: $room-highlight-color;
-$other-user-pill-bg-color: $room-highlight-color;
+$other-user-pill-bg-color: rgba(0, 0, 0, 0.2);
 // ********************
 
 // Inputs
